welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:26: error: ';' expected but 'def' found.
} def fairemotif() {
  ^